# time-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  install-linux.sh  install-windows.ps1  package-lock.json  package.json
src/: app.js  app.rs  index.html  main.rs  persistence.rs  styles.css  task.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  persistence.rs  state.rs  task.rs
